Align the date correctly.

--- a/assets/stylesheets/blog.css
+++ b/assets/stylesheets/blog.css
@@ -8,7 +8,7 @@
 }
 
 .blog-info {
-    padding: 35px 5px;
+    padding: 37px 5px 0px;
 }
 
 .blog-date {
